# performance-calculator

./: .gitignore  Home.py  README.md  Welcome.py  main.py  performance_172S.py  pyproject.toml  scratchwork.ipynb  streamlit_calculator_example.py  tables_172S.py
.trunk/: trunk.yaml
pages/: 1_Takeoff_Performance.py  2_Climb_Performance.py  3_Cruise_Performance.py  Example_Page.py  Takeoff_Performance.py  takeoff_performance.py
