[tool.poetry]
name = "performance-calculator"
version = "0.1.0"
description = "Test application for developing an aircraft performance calculator"
authors = ["Adam Goler"]
license = "Private and for internal use only, any unauthorized use is strictly prohibited without explicit permission!"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.12.0"
numpy = "^1.26.4"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
