[project]
name = "performance-calculator"
version = "0.1.0"
description = "Streamlit based performance calculator for GA airplanes."
authors = [{ name = "gol3tron", email = "adamgoler@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy (>=2.2.5,<3.0.0)",
  "scipy (>=1.15.3,<2.0.0)",
  "streamlit (>=1.45.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
